--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   top: 0;
   z-index: 1;
-  transition: 0.3s padding ease-in;
+  transition: 0.3s padding ease-in-out;
 }
 .sticky {
   padding: 1em 0.5em;
@@ -26,15 +26,18 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: inline-block;
-  width: 1em;
-  height: 1em;
+
   border-radius: 50%;
   border: 3px solid white;
   margin: 0 0.5em;
   opacity: 0;
   transition: all 0.3s ease-in-out;
+  width: 0;
+  height: 0;
 }
 
 .sticky .avatar {
   opacity: 1;
+  width: 1.2em;
+  height: 1.2em;
 }
